--- a/src/pug-form.scss
+++ b/src/pug-form.scss
@@ -1,5 +1,5 @@
-// jade-form styles
-.jade-form {
+// pug-form styles
+.pug-form {
     box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, .5);
     padding: 5px;
 }
